@@ -71,6 +71,7 @@ setup(name=PACKAGE,
         'timezone': ['pytz'],
         'simplejson': ['simplejson'],
         'cdecimal': ['cdecimal'],
+        'Levenshtein': ['python-Levenshtein'],
         },
     zip_safe=False,
     test_suite='trytond.tests',
